# LearningSciKitLearn

./: README.md  pyproject.toml
HousePrices/: housing.md  housing.py  housing_plotting.py
IrisClassification/: iris.md  iris.py  iris_plotting.py
LearningSciKitLearn/FootballAnalysis/: main.py  util.py
LearningSciKitLearn/FootballMatchOutcomePrediction/: README.md  main.py
LearningSciKitLearn/IncomePrediction/: README.md  income.py  income_plotting.py
LearningSciKitLearn/PricePrediction/: housing_plotting.py
LearningSciKitLearn/SpeciesPrediction/: README.md  iris_plotting.py
income_prediction/: README.md  income.md  income.py  income_plotting.py
price_prediction/: README.md  housing_plotting.py
species_prediction/: README.md  iris.md  iris.py  iris_plotting.py
