[tool.poetry]
name = "learningscikitlearn"
version = "0.1.0"
description = ""
authors = ["ThomasStalley <t.stalley@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

